🎨  회원별 스터디 내역 조회 -> 회원 id와 등록 상태로 스터디 내역 조회 (enrollmentStatus를 쿼리로 받아 아래 신청한 스터디 조회를 하나로 합침)